--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fresh-validation",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "chainable validation to ensure those inputs are fresh",
   "scripts": {
     "test": "grunt test"
@@ -22,11 +22,18 @@
   "homepage": "https://github.com/elliothatch/fresh-validation",
   "devDependencies": {
     "blanket": "~1.1.7",
-    "chai": "^3.0.0",
+    "chai": "~3.0.0",
     "grunt": "~0.4.5",
     "grunt-contrib-jshint": "~0.11.2",
     "grunt-jsdoc": "~0.6.7",
     "grunt-mocha-test": "~0.12.7",
-    "mocha": "~2.2.5"
+    "mocha": "~2.2.5",
+    "sinon": "~1.15.4",
+    "travis-cov": "~0.2.5"
+  },
+  "config": {
+    "travis-cov": {
+      "threshold": 100
+    }
   }
 }
