--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "description": "chainable validation to ensure those inputs are fresh",
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "coveralls": "cat logs/lcov.info | ./node_modules/.bin/coveralls"
   },
   "repository": {
     "type": "git",
@@ -23,11 +24,13 @@
   "devDependencies": {
     "blanket": "~1.1.7",
     "chai": "~3.0.0",
+    "coveralls": "~2.11.4",
     "grunt": "~0.4.5",
     "grunt-contrib-jshint": "~0.11.2",
     "grunt-jsdoc": "~0.6.7",
     "grunt-mocha-test": "~0.12.7",
     "mocha": "~2.2.5",
+    "mocha-lcov-reporter": "~1.0.0",
     "sinon": "~1.15.4",
     "travis-cov": "~0.2.5"
   },
